Fix height issue when device is too small

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
   background-image: url("./img/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
